# C-Backend-C-Frontend-Example

./: Frontend.csproj  Frontend.slnx  Program.cs  README.md  UnifiedHost.sln  imgui.ini
Backend/: Backend.cpp  Backend.def  Backend.h  CMakeLists.txt  Dx11Renderer.cpp  Dx11Renderer.h  EngineMain.cpp  HostFxrBridge.cpp  HostFxrBridge.h  ImGuiLayer.cpp  ImGuiLayer.h  README.md
Bindings/: BackendPlusPlus.cs  EngineApi.cs  NativeEntryPoints.cs
GameProjects/MyNewGame/: GameScript.cs
GameProjects/OrbitGame/: GameScript.cs
GameProjects/SandboxGame/: GameScript.cs
GameTemplates/DefaultGame/: DefaultGame.csproj  GameScript.cs
Managed/EngineScripting.Abstractions/: GameContext.cs  IGameScript.cs
ScriptingHost/: ScriptingHost.csproj
ScriptingHost/Bindings/: EngineApi.cs  NativeEntryPoints.cs
Scripts/: create-unified-sln.ps1  new-game-project.ps1  setup-imgui.ps1
